# QTFFPlayer

./: .gitignore  CMakeLists.txt  QTFFPlayer_zh_CN.ts  README.md  mainwindow.cpp  mainwindow.ui
build-scripts/: build.sh  build_ffmpeg.sh  build_libaom.sh  build_libass.sh  build_libavisynth-plus.sh  build_libbluray.sh  build_libdav1d.sh  build_libfdk-aac.sh  build_libfreetype.sh  build_libfribidi.sh  build_libgsm.sh  build_libiconv.sh  build_libintl.sh  build_liblame.sh  build_libmodplug.sh  build_libmysofa.sh  build_libopencore-amr.sh  build_libopenh264.sh  build_libopenjpeg.sh  build_libopus.sh  build_libpng.sh  build_librubberband.sh  build_libsdl2.sh  build_libshine.sh  build_libsnappy.sh  build_libsoxr.sh  build_libspeex.sh  build_libtheora.sh  build_libtwolame.sh  build_libvidstab.sh  build_libvmaf.sh  build_libvo-amrwbenc.sh  build_libvpx.sh  build_libwavpack.sh  build_libwebp.sh  build_libx264.sh  build_libx265.sh  build_libxavs.sh  build_libxcb.sh  build_libxvid.sh  (+10 more)
src/: main.cpp
src/base/: IObserver.cpp  IObserver.h  IThread.cpp  IThread.h
